<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0096D5"
    tools:context=".Login"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView_Reg_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/txtView_Reg_Title"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_User_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_User_Email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView_Reg_Title"
        app:layout_constraintTop_toBottomOf="@+id/textView_Reg_Title" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/txt_Password"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/editText_User_Email"
        app:layout_constraintTop_toBottomOf="@+id/editText_User_Email" />

    <Button
        android:id="@+id/button_Reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="registerUser"
        android:text="@string/btn_Reg"
        app:layout_constraintEnd_toEndOf="@+id/editText_Password"
        app:layout_constraintStart_toStartOf="@+id/editText_Password"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

    <TextView
        android:id="@+id/textView_Already_Registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:onClick="goLogin"
        android:text="@string/txtView_Already_Registered"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Reg" />

    <ProgressBar
        android:id="@+id/progressBar_User_Reg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_Already_Registered"
        app:layout_constraintStart_toStartOf="@+id/textView_Already_Registered" />
</android.support.constraint.ConstraintLayout>